openvpn (2.4.8-1) UNRELEASED; urgency=medium

  [ Jörg Frings-Fürst ]
  * New upstream release (Closes: #950610).
  * Refresh debian/patches/openvpn-pkcs11warn.patch.
  * Remove upstream applied fix-pkcs11-helper-hang.patch. 
  * Add libp11-kit-dev to Build - Depends (Closes: #940727).
  * Declare compliance with Debian Policy 4.5.0 (No changes needed).

 -- Jörg Frings-Fürst <debian@jff.email>  Fri, 10 Apr 2020 23:10:22 +0200

openvpn (2.4.7-1) unstable; urgency=medium

  [ Bernhard Schmidt ]
  * New upstream version 2.4.7
    - improvements regarding TLSv1.3
    - Add CAP_AUDIT_WRITE for auth_pam for upstream units (Closes: #868806)
  * adjust kfreebsd_support.patch for new upstream version
  * Also Add CAP_AUDIT_WRITE for auth_pam for openvpn@.service (Closes: #868806)
  * openvpn@.service: Bump LimitNPROC to 100, see #861923

  [ Simon Deziel ]
  * d/control: suggests openvpn-systemd-resolved (Closes: #913265)

  [ Hilko Bengen ]
  * Avoid hangs when spawning child processes by not setting pkcs11-helper
    "safe fork mode" (Closes: #772812, #900805, #907452)

 -- Bernhard Schmidt <berni@debian.org>  Wed, 20 Feb 2019 14:50:03 +0100

openvpn (2.4.6-1) unstable; urgency=medium

  [ Jörg Frings-Fürst ]
  * New upstream release.
    - Refresh patches.
    - Fix "does not start if link-mtu is too low" (Closes: #867113).
    - Fix "auth-tokens are purged if auth-nocache is set" (Closes: #883601).
  * Migrate to debhelper 11:
    - Change debian/compat to 11.
    - Bump minimum debhelper version in debian/control to >= 11.
  * Declare compliance with Debian Policy 4.1.5 (No changes needed).
  * New debian/patches/spelling_errors.patch to correct spelling errors.
  * New debian/patches/systemd.patch to remove obsolete syslog.target.
  * debian/changelog:
    - Rewrite to DEP5 copyright format.
  * debian/control:
    - Change to my new email address.
    - Remove trailing whitespaces.
  * debian/rules:
    - Remove trailing whitespaces.