@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Bernhard Schmidt <berni@debian.org>
 Uploaders: Jörg Frings-Fürst <debian@jff.email>
 Build-Depends:
- debhelper (>= 11),
+ debhelper-compat (= 12),
  dpkg-dev (>= 1.16.1),
  iproute2 [linux-any],
  liblz4-dev,
